k3s-userapps/postiz/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postiz
  namespace: postiz
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 5000
  selector:
    app.kubernetes.io/pod: postiz
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: postiz-redis
  namespace: postiz
spec:
  ports:
    - name: redis
      port: 6379
      protocol: TCP
      targetPort: 6379
  selector:
    app.kubernetes.io/pod: postiz-redis
  type: ClusterIP
