k3s-userapps/postiz/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: acme-issuer
    gethomepage.dev/enabled: "true"
    gethomepage.dev/href: "https://postiz.kirillorlov.pro"
    gethomepage.dev/group: Apps
    gethomepage.dev/name: Postiz
    gethomepage.dev/icon: https://raw.githubusercontent.com/gitroomhq/postiz-app/refs/heads/main/apps/frontend/public/logo.svg
    gethomepage.dev/pod-selector: "app.kubernetes.io/pod=postiz"
    gethomepage.dev/description: "Social Media Scheduling Tool"
  name: postiz
  namespace: postiz
spec:
  rules:
  - host: postiz.kirillorlov.pro
    http:
      paths:
      - backend:
          service:
            name: postiz
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - postiz.kirillorlov.pro
    secretName: postiz-tls
